--- a/src/formularios/frmHome.form
+++ b/src/formularios/frmHome.form
@@ -1505,7 +1505,7 @@
             <Component class="javax.swing.JLabel" name="lblMitad8">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/home/mitad9.jpg"/>
+                  <Image iconType="3" name="/iconos/home/mitad7.JPG"/>
                 </Property>
               </Properties>
               <Constraints>
