--- a/src/formularios/frmCompras.form
+++ b/src/formularios/frmCompras.form
@@ -418,6 +418,9 @@
                 <StringItem index="2" value="Libre"/>
               </StringArray>
             </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Cursor Por defecto"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cmbTipoCompraItemStateChanged"/>
